# aedt_report_react

./: .gitignore  README.md  ccomands.md  cdx.md  package-lock.json  pyaedt.md
backend/: pyproject.toml
backend/app/: __init__.py  celery_app.py  config.py  dependencies.py  main.py
backend/app/routers/: __init__.py  datasheets.py  designs.py  projects.py  session.py  simulations.py
backend/app/schemas/: datasheet.py  design.py  project.py  results.py  session.py  simulation.py
backend/app/services/: datasheet.py  extractors.py  hfss_session.py  repository.py  storage.py  video.py
backend/app/workers/: __init__.py  tasks.py
backend/tests/: test_repository.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/components/charts/: RadiationHeatmap.tsx  RadiationPolarChart.tsx  SParameterChart.tsx
frontend/src/components/common/: Card.tsx  ErrorMessage.tsx  Loader.tsx  Table.tsx  Tabs.tsx
frontend/src/hooks/: useAedtSession.ts  useDatasheet.ts  useDesignSummary.ts  useDesigns.ts  useProjects.ts  useRadiation.ts  useSParameters.ts  useSimulationFrames.ts  useSimulationJob.ts
frontend/src/pages/: DatasheetPage.tsx  RadiationPage.tsx  SParametersPage.tsx  SessionPage.tsx  SimulationVideoPage.tsx  SummaryPage.tsx
frontend/src/services/: aedtApi.ts  apiClient.ts
frontend/src/styles/: globals.css
frontend/src/types/: aedt.ts  datasheet.ts  designs.ts  projects.ts  results.ts  simulations.ts
scripts/: start-backend.ps1
(+5 files in other folders)
